# spiw-bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.json
resources/: messages.json
spiw/: __main__.py  bot.py  config.py  errors.py
spiw/links/: normalizers.py  redirect.py  validator.py
spiw/models/: enums.py  inline.py  media.py  validated_url.py
spiw/pipeline/: downloader.py  ffmpeg.py  processor.py
spiw/providers/: base.py  instagram.py  threads.py  tiktok.py  x.py  yt_dlp_base.py
spiw/storage/: database.py  media_cache.py  memory.py
spiw/telegram/: delivery.py  handlers.py  inline_results.py  orchestrator.py
spiw/utils/: hashing.py  messages.py
src/: index.ts
src/adapters/media/: session-builder.ts
src/adapters/metadata/: gateway.ts
src/adapters/persistence/: post-cache-repo.ts  request-repo.ts  stats-repo.ts  ui-state-repo.ts
src/app/: bootstrap.ts
src/config/: env.ts
src/core/: caption-policy.ts  cobalt-pool.ts  cobalt.ts  errors.ts  hash.ts  log.ts  media-info.ts  messages.ts  models.ts  runtime.ts  semaphore.ts  session-store.ts  time.ts  token-store.ts  url.ts
src/core/db/: client.ts  schema.ts  worker.ts
src/core/metadata/: errors.ts  http.ts  index.ts  shared.ts  url.ts
src/core/types/: metadata.ts
src/telegram/: bot.ts  errors.ts  presenter.ts  ui.ts  user-errors.ts
src/use-cases/: deliver-inline-request.ts  details-flow.ts  prepare-inline-request.ts  request-flow.ts  session-flow.ts  ui-token.ts
(+16 files in other folders)
