[project]
name = "spiw-bot"
version = "2.0.0"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.18,<4",
    "aiosqlite>=0.20,<1",
    "aiohttp>=3.11,<4",
    "yt-dlp[default]>=2025.1",
    "instaloader>=4.15,<5",
    "cachetools>=5.5,<6",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
]

[project.scripts]
spiw-bot = "spiw.__main__:main"
